--- a/views/user/partials/sidebar.ejs
+++ b/views/user/partials/sidebar.ejs
@@ -36,7 +36,7 @@
           <i class="fas fa-wallet"></i>
           <span>Wallet</span>
         </a>
-        <a href="/user/password-change" class="sidebar-link" data-page="password">
+        <a href="/password-change" class="sidebar-link" data-page="password">
           <i class="fas fa-key"></i>
           <span>Password Change</span>
         </a>
