implement coupon and offer functionality

--- a/views/user/partials/sidebar.ejs
+++ b/views/user/partials/sidebar.ejs
@@ -32,7 +32,7 @@
           <i class="fas fa-shopping-bag"></i>
           <span>Orders</span>
         </a>
-        <a href="/user/wallet" class="sidebar-link" data-page="wallet">
+        <a href="/wallet" class="sidebar-link" data-page="wallet">
           <i class="fas fa-wallet"></i>
           <span>Wallet</span>
         </a>
