--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -66,12 +66,21 @@
             </td>
             <td class="px-4 py-3 whitespace-nowrap">
               <% if (offerSummaries.length > 0) { %>
-                <ul class="offer-list list-disc pl-4">
+                <ul class="offer-list list-disc pl-4 mb-1">
                   <% offerSummaries.forEach(offer => { %>
                     <li><%= offer %></li>
                   <% }) %>
                 </ul>
-              <% } else { %>
+              <% } %>
+              <% if (order.coupon) { %>
+                <div class="mt-1 px-2 py-1 rounded bg-blue-50 border border-blue-200 text-blue-700 text-xs font-semibold inline-flex items-center gap-1">
+                  <i class="fa-solid fa-ticket"></i>
+                  Coupon Applied: <%= order.coupon %>
+                  <% if (order.discount > 0) { %>
+                    <span class="ml-1">(-₹<%= order.discount.toLocaleString('en-IN') %>)</span>
+                  <% } %>
+                </div>
+              <% } else if (offerSummaries.length === 0) { %>
                 <span class="text-gray-400">No Offers</span>
               <% } %>
             </td>
